# AiExpenseTracker

./: pyproject.toml  requirements.txt
backend/: chatbot.py  expense.py  main.py
database/: expense.db  memory.db
